<resources>
    <string name="app_name">El-Kollia</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="closebutton">close</string>
    <string name="hide_pwd">hide password</string>
    <string name="show_pwd">show password</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="newUser">New User</string>
    <string name="forgot">Forgot password</string>
    <string name="passowrd">Password</string>
    <string name="email">Email</string>
    <string name="mobileNumber">Mobile</string>
    <string name="year">year</string>
    <string name="department">department</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="terms_conditions">terms</string>
    <string name="already_user">Already User</string>
    <string name="fullName">Full name</string>
    <string name="text_post_test">I love musicI love music
        I love musicI love musicI love musicI love musicI loveI
        love musicI love musicI love musicI love musicI love
        musicI love musicI love musicI love musicI love musicI love musicI
        love musicI love musicI love musicI love musicI love musicI love musicI
        love musicI love musicI love musicI love musicI love  music</string>
    <string name="title_activity_post">Post Activity</string>

    <string name="description">electronic engineer</string>


    <!--for navigation items-->
    <string name="title_home">Home</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="search">search</string>
    <string name="error">Error !</string>
    <string name="retry">Retry</string>
    <string name="it_s_always_good_to_ask">it\'s always good to ask </string>

</resources>
