<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/login_background"
    android:layout_height="fill_parent"
    android:padding="20dp" >


    <LinearLayout

        android:layout_alignParentBottom="true"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginBottom="80dp">




        <EditText
            android:id="@+id/login_emailid"
             android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_credentials"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_circular"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/drawable_et_padding"
            style="?android:attr/borderlessButtonStyle"
            />


        <EditText
            android:layout_marginTop="4dp"
            android:id="@+id/login_password"
             android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_credentials"
            android:background="@drawable/edit_text_circular"
            android:drawablePadding="@dimen/drawable_et_padding"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/password"

            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pwd"
                android:textColor="@drawable/text_selector"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@drawable/text_selector"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_credentials"
            android:layout_marginTop="3dp"
            android:background="@drawable/signup_btn_selector"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="16sp"
            />
    </LinearLayout>


    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_above="@+id/login_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="66dp" />

    <ImageView
        android:background="@drawable/logowhite"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/createAccount" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@drawable/text_selector"
        android:textSize="15sp"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>