<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/login_background"

    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logowhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_credentials"
        android:background="@drawable/edit_text_circular"
        android:drawablePadding="@dimen/drawable_et_padding"
        android:drawableStart="@drawable/user"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:paddingEnd="8dp"
        android:paddingStart="@dimen/padding_start_et"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
         />


    <EditText
        android:id="@+id/userEmailId"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_credentials"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_circular"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="@dimen/padding_start_et"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <Spinner
        android:id="@+id/year_sp_id"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_credentials"
        android:background="@drawable/cell_shape"
        android:drawablePadding="8dp"
        android:dropDownSelector="@drawable/spinner_selector"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmailId" />

    <Spinner
        android:id="@+id/department_sp_id"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_credentials"
        android:background="@drawable/cell_shape"
        android:drawablePadding="8dp"
        android:dropDownSelector="@drawable/spinner_selector"
        android:gravity="center"
        android:padding="@dimen/edit_text_xredentials_padding"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_sp_id" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:background="@drawable/edit_text_circular"
        android:layout_height="@dimen/edit_text_credentials"
        android:drawableLeft="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="@dimen/padding_start_et"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department_sp_id" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_credentials"
        android:background="@drawable/edit_text_circular"
        android:drawableStart="@drawable/confirm_password"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:paddingStart="@dimen/padding_start_et"
        android:drawablePadding="@dimen/drawable_et_padding"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.49" />
    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_credentials"
        android:background="@drawable/signup_btn_selector"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="58dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintHorizontal_bias="0.0" />


    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@drawable/text_selector"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        app:layout_constraintHorizontal_bias="0.501" />



</android.support.constraint.ConstraintLayout>
</ScrollView>